<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 全局通用 -->
    <string name="app_name">移动配餐</string>
    <string name="img_desc">this is a picture</string>
    <string name="general_confirm_text">确 认</string>
    <string name="test_text">测试文字</string>
    <string name="save_text">保&#160;&#160;&#160;&#160;存</string>
    <string name="cancel">取消</string>
    <string name="camera_commit">提&#160;&#160;&#160;交</string>
    <string name="dish_category_choice">类型选择</string>
    <string name="custom_info_sync">信息同步</string>
    <string name="update_immediately">立即更新</string>

    <!-- 登陆页面相关 -->
    <string name="login_account_text_hint">账户</string>
    <string name="login_pwd_text_hint">密码</string>
    <string name="login_text">登&#160;&#160;&#160;&#160;录</string>
    <string name="login_company_desc">贵阳翼腾信息技术有限责任公司</string>
    <string name="login_copyright_desc">版权所有</string>
    <string name="login_english_desc1">Copyright 2013&#8211;2015</string>
    <string name="login_english_desc2">Allright Reservd</string>
    <string name="login_company_tel">0851&#8211;6850058</string>
    <string name="login_remenber_my_acount">记住我的账户</string>

    <!-- 电话订单相关 -->
    <string name="header_tel_text">电话</string>
    <string name="header_date_text">时间</string>
    <string name="header_addr_text">地址</string>
    <string name="header_collocate">配餐</string>
    <string name="title_each_item_dish_name">配餐：</string>
    <string name="title_each_item_count">小计：</string>
    <string name="title_each_item_remark">备注：</string>
    <string name="total_price_text">合计 %s 元</string>

    <!-- 设置页面相关 -->
    <string name="printer_text">打印机</string>
    <string name="scan_list_title">蓝牙设备</string>
    <string name="setting_func_list_help">帮助</string>
    <string name="exit">退&#160;&#160;出</string>
    <string name="scan_dev_text">扫描设备</string>
    <string name="scan_again_text">重新扫描</string>
    <string name="scan_invisible_text">关&#160;&#160;闭</string>
    <string name="setting_menu_category_title_text">菜品类目</string>
    <string name="menu_put_on_shelves_text">上架</string>
    <string name="menu_put_off_shelves_text">下架</string>
    <string name="add_new_dish_text">添加菜品</string>
    <string name="dish_name_edit_prompt">请在此输入菜品名</string>
    <string name="dish_price_edit_prompt">请在此输入价格</string>

    <!-- 我的资料相关 -->
    <string name="setting_own_profile_name_text">店名：</string>
    <string name="setting_own_profile_tel_text">电话：</string>
    <string name="setting_own_profile_dish_text">简介：</string>
    <string name="setting_own_profile_scope_text">范围：</string>
    <string name="setting_own_profile_addr_text">地址：</string>

    <!-- 订单相关 -->
    <string name="order_count_text">订单:%s单</string>
    <string name="order_total_price_text">金额：%s元</string>

    <!-- 历史订单相关 -->
    <string name="order_history_query_begin_text">开始：</string>
    <string name="order_history_query_end_text">截止：</string>

    <!-- 选择器相关 -->
    <string name="np_number_picker_increment_button">Increment</string>
    <string name="np_number_picker_decrement_button">Decrement</string>

    <!-- 备注信息相关 -->
    <string name="setting_remark_info_remind_text">备注信息将会在粉面类目菜单显示\n每隔限制输入2个字&#160;&#160;共可添加6个备注</string>
    <string name="setting_remark_category_title_text">类目选择</string>
    <string name="customer_tel_text">电话</string>
    <string name="customer_addr_text">地址</string>
    <string name="remark_edit_category_title">类目</string>

    <!-- 提示语相关 -->
    <string name="toast_remind_loading">正在加载..</string>
    <string name="toast_remind_uploading">正在上传..</string>
    <string name="toast_remind_logining">正在登陆..</string>
    <string name="toast_remind_commiting">正在提交..</string>
    <string name="toast_remind_deleting">正在删除..</string>
    
    
    <string name="toast_remind_upload_succeed">上传成功！</string>
    <string name="toast_remind_commit_succeed">提交成功！</string>
    <string name="toast_remind_delete_succeed">删除成功！</string>
    
    <string name="toast_remind_logining_failed">登陆失败！</string>
    <string name="toast_remind_commit_failed">提交失败！</string>
    <string name="toast_remind_upload_failed">上传失败！</string>
    <string name="toast_remind_delete_failed">删除失败！</string>
    
	<string name="dialog_put_on_text">当前商品已下架\n现在上架吗？</string>
	<string name="dialog_put_off_text">当前商品已上架\n现在下架吗？</string>
	<string name="dialog_dish_delete_text">要删除该菜品吗？</string>
    
</resources>