<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GENERAL_VIEW_BG_COLOR"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2.5"
        android:orientation="vertical" >

        <TextView
            android:layout_marginTop="40dp"
            android:id="@+id/login_title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableTop="@drawable/logo"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textColor="@color/COLOR_BLACK" />

        <EditText
            android:id="@+id/login_account_edit_box"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/login_edit_box_margin_size"
            android:layout_marginRight="@dimen/login_edit_box_margin_size"
            android:layout_marginTop="40dp"
            android:background="@drawable/general_edit_corner_bg"
            android:drawableLeft="@drawable/login_account_icon_left"
            android:drawablePadding="10dp"
            android:hint="@string/login_account_text_hint"
            android:singleLine="true" />

        <EditText
            android:id="@+id/login_pwd_edit_box"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/login_edit_box_margin_size"
            android:layout_marginRight="@dimen/login_edit_box_margin_size"
            android:layout_marginTop="10dp"
            android:background="@drawable/general_edit_corner_bg"
            android:drawableLeft="@drawable/login_pwd_icon_left"
            android:drawablePadding="10dp"
            android:hint="@string/login_pwd_text_hint"
            android:singleLine="true"  />

        <CheckBox
            android:id="@+id/login_save_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/login_edit_box_margin_size"
            android:layout_marginTop="10dp" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/general_corner_frame_small"
            android:text="@string/login_text"
            android:textColor="@color/COLOR_WHITE"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/login_company_desc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/login_copyright_desc" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/login_english_desc1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/login_english_desc2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/login_company_tel" />
    </LinearLayout>

</LinearLayout>