<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/GENERAL_VIEW_BG_COLOR"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/COLOR_WHITE"
        android:orientation="vertical" >

        <FrameLayout
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/camera_preview_back_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity=""
                android:gravity="center"
                android:text="@string/add_new_dish_text" />

            <ImageButton
                android:id="@+id/add_camera_preview_img"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/test_text"
                android:gravity="center" />
        </FrameLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/dish_name_edit_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/general_edit_corner_bg"
        android:hint="@string/dish_name_edit_prompt"
        android:inputType="text"
        android:paddingLeft="10dp" >
    </EditText>

    <EditText
        android:id="@+id/dish_price_edit_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/general_edit_corner_bg"
        android:hint="@string/dish_price_edit_prompt"
        android:inputType="number"
        android:paddingLeft="10dp" >
    </EditText>

</LinearLayout>