<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="130dp"
    android:layout_gravity="center"
    android:background="@drawable/date_picker_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/add_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/test_text"
        android:textColor="@color/GENERAL_TEXT_COLOR"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:paddingBottom="5dp" >

        <Button
            android:id="@+id/add_edit_query_btn"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="30dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/setting_general_corner_red_frame"
            android:text="@string/general_confirm_text" />

        <Button
            android:id="@+id/add_edit_cancel_btn"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="0dip"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/setting_general_corner_gray_frame"
            android:text="@string/cancel" />
    </LinearLayout>

    <EditText
        android:id="@+id/add_category_edit_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_centerVertical="true"
        android:background="@drawable/general_gray_rectangle_bg"
        android:inputType="text" />

</RelativeLayout>