<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="8dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="8dp" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/general_dot"
            android:contentDescription="@string/img_desc" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <!-- 第一行：菜名 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_each_item_dish_name"
                android:textSize="@dimen/dish_combo_list_text_size" />

            <TextView
                android:id="@+id/order_phone_dish_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:singleLine="false"
                android:textSize="@dimen/dish_combo_list_text_size" />
        </LinearLayout>

        <!-- 第二行：小计 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_each_item_count"
                android:textSize="@dimen/dish_combo_list_text_size" />

            <TextView
                android:id="@+id/order_phone_dish_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textSize="@dimen/dish_combo_list_text_size" />
        </LinearLayout>

        <!-- 第三行：备注 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_each_item_remark"
                android:textSize="@dimen/dish_combo_list_text_size" />

            <TextView
                android:id="@+id/order_phone_dish_remark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:singleLine="false"
                android:textSize="@dimen/dish_combo_list_text_size" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>