<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/COLOR_WHITE" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_tel_text"
            android:textColor="@color/GENERAL_TEXT_COLOR"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/customer_tel_view"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/GENERAL_TEXT_COLOR"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:gravity="right" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/order_list_divider_sharp"
        android:contentDescription="@string/img_desc" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/customer_addr_text"
            android:textColor="@color/GENERAL_TEXT_COLOR"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/customer_addr_view"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/GENERAL_TEXT_COLOR"
            android:textSize="20sp"
            android:layout_marginLeft="20dp"
            android:singleLine="true"
            android:gravity="right" />
    </LinearLayout>

</LinearLayout>